--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -52,7 +52,21 @@
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<version>2.0.3</version>
-		</dependency>		
+		</dependency>
+
+
+<!--  
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.springframework.security</groupId>
+  <artifactId>spring-security-test</artifactId>
+  <scope>test</scope>
+</dependency>
+-->
+				
 	</dependencies>
 
 	<build>
